# linkedin-recruiter-zfmk15

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: analysis-service.yml  api-gateway.yml  data-service.yml  search-service.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/helm/analysis-service/: Chart.yaml  values.yaml
infrastructure/helm/analysis-service/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/helm/api-gateway/: Chart.yaml  values.yaml
infrastructure/helm/api-gateway/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/helm/data-service/: Chart.yaml  values.yaml
infrastructure/helm/ingress/: Chart.yaml  values.yaml
infrastructure/helm/istio/: Chart.yaml  values.yaml
infrastructure/helm/mongodb/: Chart.yaml  values.yaml
infrastructure/helm/monitoring/: Chart.yaml  values.yaml
infrastructure/helm/postgresql/: Chart.yaml  values.yaml
infrastructure/helm/redis/: Chart.yaml  values.yaml
infrastructure/helm/search-service/: Chart.yaml  values.yaml
infrastructure/helm/web/: Chart.yaml  values.yaml
infrastructure/terraform/: cloudfront.tf  documentdb.tf  eks.tf  elasticache.tf  iam.tf  kms.tf  main.tf  monitoring.tf  outputs.tf  provider.tf  rds.tf  route53.tf  s3.tf  variables.tf  vpc.tf  waf.tf
src/backend/: .dockerignore  .env.example  .eslintrc.ts  .prettierrc  Dockerfile  README.md  docker-compose.yml
src/backend/analysis-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/analysis-service/src/: __init__.py
src/backend/analysis-service/src/config/: __init__.py  claude_config.py  logging_config.py
src/backend/analysis-service/src/core/: __init__.py  analysis_engine.py  claude_client.py  profile_analyzer.py  skill_matcher.py
src/backend/analysis-service/src/models/: __init__.py  analysis_result.py  profile.py
src/backend/analysis-service/src/routers/: __init__.py  analysis.py  health.py
src/backend/analysis-service/src/schemas/: __init__.py  analysis.py  profile.py
src/backend/analysis-service/src/utils/: __init__.py  logger.py
src/backend/analysis-service/tests/: __init__.py  conftest.py  test_analysis_engine.py  test_profile_analyzer.py
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/api-gateway/src/: app.ts
src/backend/data-service/: Dockerfile  README.md  pom.xml
src/backend/kubernetes/: analysis-service.yaml  api-gateway.yaml  data-service.yaml  ingress.yaml  mongodb.yaml  postgresql.yaml  redis.yaml  search-service.yaml
src/backend/search-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/search-service/src/: __init__.py
src/backend/search-service/src/config/: __init__.py  linkedin_config.py  logging_config.py
src/backend/search-service/src/core/: __init__.py  linkedin_client.py  profile_extractor.py  search_engine.py
src/backend/search-service/src/models/: __init__.py  profile.py  search_criteria.py
src/backend/search-service/src/routers/: __init__.py  health.py  search.py
src/backend/search-service/src/schemas/: __init__.py  profile.py  search.py
src/backend/search-service/src/utils/: __init__.py  logger.py
src/backend/search-service/tests/: __init__.py  conftest.py  test_linkedin_client.py  test_search_engine.py
src/web/: .dockerignore  .env.example  .eslintrc.ts  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: App.tsx  main.tsx  vite-env.d.ts
src/web/tests/: setup.ts
(+189 files in other folders)
